Added animations and fixed some paragraph texts

--- a/src/app/about-me-pie/about-me-pie.component.html
+++ b/src/app/about-me-pie/about-me-pie.component.html
@@ -1,10 +1,10 @@
 <div class="component-container">
-  <div [@flipState]="transition">
+  <div data-aos="zoom-in" data-aos-duration="1000">
     <h1 class="pie-main-heading">My Life, Divided.</h1>
   </div>
   <div class="container pie-container">
     <div class="row">
-      <div [@fadeInLeft]="transition" class="col">
+      <div data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400" class="col">
         <h1 class="pie-side-heading">Adventurer</h1>
         <h6 class="pie-side-text">Traveling</h6>
         <h6 class="pie-side-text">Scuba Diving</h6>
@@ -26,7 +26,7 @@
             </div>
           </div>
           </div>
-          <div [@fadeInUp]="transition" class="col">
+          <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" class="col">
             <h1 class="pie-center-heading">Gamer</h1>
             <h6 class="pie-center-text">League of Legends</h6>
             <h6 class="pie-center-text">Black Ops Zombies</h6>
@@ -35,7 +35,7 @@
             <h6 class="pie-center-text">Minecraft</h6>
           </div>
         </div>
-      <div [@fadeInRight]="transition" class="col">
+        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400" class="col">
         <h1 class="pie-side-heading">Developer</h1>
         <h6 class="pie-side-text">Full-stack Development</h6>
         <h6 class="pie-side-text">Angular (HTML, CSS, TS)</h6>
