--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,42 +34,7 @@
   </div>
   <hr style="margin-bottom: 2rem; height: 0.25rem;">
   <app-about-me-pie></app-about-me-pie>
-  <hr style="margin-bottom: 2rem; height: 0.25rem;">
-  <div [@fadeInState]="fadeIn">
-    <div class="fun-facts-container">
-      <div class="about-me-box">
-        <div class="container">
-          <div class="row">
-            <h2 class="fun-facts-heading">Fun Facts</h2>
-          </div>
-          <div>
-            <div class="row">
-              <h6 class="bullet-items">• I have 4 tattoos</h6>
-            </div>
-            <div class="row">
-              <h6 class="bullet-items">• My favorite snack is popcorn</h6>
-            </div>
-            <div class="row">
-              <h6 class="bullet-items">• I like spiders</h6>
-            </div>
-            <div class="row">
-              <h6 class="bullet-items">• I don't have any pets</h6>
-            </div>
-            <div class="row">
-              <h6 class="bullet-items">• I like going for runs</h6>
-            </div>
-            <div class="row">
-              <h6 class="bullet-items">• I can ice skate</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="about-me-box">
-        <img src="../assets/images/homeandabout/freefall.png" class="img-thumbnail about-img-heading">
-      </div>
-    </div>
-    <app-footer></app-footer>
-  </div>
+    <app-footer data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000"></app-footer>
 </div>
 
 <!-- Phone Content (1600 width or smaller)-->
@@ -91,21 +56,7 @@
         </span>
       </p>
     </div>
-    <hr style="margin-bottom: 2rem; height: 0.25rem;">
     <app-about-me-phone-pie></app-about-me-phone-pie>
-    <hr style="margin-bottom: 2rem; height: 0.25rem;">
-    <img src="../assets/images/homeandabout/freefall.png" style="width: 100%;">
-    <div class="row">
-      <h2 class="phone-fun-facts-heading">Fun Facts</h2>
-    </div>
-    <div>
-      <h6 class="phone-bullet-items">• I have 4 tattoos</h6>
-        <h6 class="phone-bullet-items">• My favorite snack is popcorn</h6>
-        <h6 class="phone-bullet-items">• I like spiders</h6>
-        <h6 class="phone-bullet-items">• I don't have any pets</h6>
-        <h6 class="phone-bullet-items">• I like going for runs</h6>
-        <h6 class="phone-bullet-items">• I can ice skate</h6>
-  </div>
   <app-footer></app-footer>
 </div>
     
